All plugins now extend BasePlugin. Added unload method to plugins and scene. Renamed library.

--- a/www/examples/hello.html
+++ b/www/examples/hello.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="../css/style.css"/>
 		<script src="../js/jquery-1.9.1.min.js"></script>
 		<script src="../js/stats.js"></script>
-		<script src="../js/main.js"></script>
+		<script src="../js/svgVerlet.js"></script>
 	</head>
 	<body>
 
